--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.top-bar {
+  font-size: 40px;
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.system-container {
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.diagram-container {
+  width: 100%;
+  height: 800px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.stencil-app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.stencil-app .app-stencil {
+  position: relative;
+  width: 200px;
+  border: 1px solid #f0f0f0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stencil-app .app-content {
+  flex: 1;
+  height: 800px;
+  margin-right: 8px;
+  margin-left: 8px;
+  box-shadow: 0 0 10px 1px #e9e9e9;
 }
