--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,11 @@
   margin-left: 8px;
   box-shadow: 0 0 10px 1px #e9e9e9;
 }
+
+.toolbar {
+  padding: 5px 0;
+}
+
+.toolbar .x6-toolbar-item {
+  margin: 0 10px;
+}
