--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,16 @@
   position: relative;
 }
 
-.mem-bar .mem-region {
+.mem-bar .allocated-mr {
   height: 100%;
   background-color: greenyellow;
   position: absolute;
+}
+
+.mem-bar .free-mr {
+  background-color: skyblue;
+  position: absolute;
+  height: 100%;
 }
 
 .selected-mr::before {
