divide node editor

--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,12 @@
   border-left: solid 1px gray;
   border-right: solid 1px gray;
 }
+
+.mapping-editor {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 300px;
+  background-color: gray;
+}
