--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,20 @@
   border-right: solid 1px gray;
 }
 
+.shared-mr {
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  background-image: linear-gradient(
+    45deg,
+    rgba(0, 153, 68, .5) 0, rgba(0, 153, 68, .5) 25%, transparent 25%, transparent 50%,
+    rgba(0, 153, 68, .5) 50%, rgba(0, 153, 68, .5) 75%, transparent 75%, transparent
+  );
+  background-size: 10px 10px;
+  border-left: solid 1px gray;
+  border-right: solid 1px gray;
+}
+
 .mapping-editor {
   position: absolute;
   left: 0;
